...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/saturday"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.493" />

    <Button
        android:id="@+id/monday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="25dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
...
        app:layout_constraintEnd_toStartOf="@+id/start_day"
        app:layout_constraintStart_toEndOf="@+id/start_month"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.304"></TextView>

    <Button
        android:id="@+id/friday"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/round_button"
        android:fontFamily="@font/lato"
        android:gravity="center"
        android:text="F"
...
        app:layout_constraintEnd_toStartOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.393"></TextView>

    <ListView
        android:id="@+id/habit_event_list"
        android:layout_width="375dp"
        android:layout_height="301dp"
        android:divider="@android:color/transparent"
        android:dividerHeight="10.0sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.186"></TextView>

    <ImageButton
        android:id="@+id/back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="323dp"
        android:layout_marginBottom="158dp"
        android:background="#00FFFFFF"
        android:src="?attr/actionModeCloseDrawable"
...
