...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.195">
    </EditText>

    <EditText
        android:id="@+id/habit_reason"
        android:layout_width="254dp"
        android:layout_height="45dp"
        android:layout_marginTop="23dp"
        android:layout_marginBottom="41dp"
        android:background="@drawable/rounded_corners_user_input"
        android:gravity="center"
...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:tint="@color/Lighter_Gray_Text" />

    <ImageButton
        android:id="@+id/confirm"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="323dp"
        android:layout_marginBottom="158dp"
        android:backgroundTint="#00FFFFFF"
        android:src="@drawable/ic_done"
...
