...
        app:layout_constraintHorizontal_bias="0.448"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.59" />

    <ImageButton
        android:id="@+id/addHabitEventButton2"
        android:layout_width="28dp"
        android:layout_height="24dp"
        android:backgroundTint="@color/Dark_Gray_Background"
        android:foregroundTint="@color/Lighter_Gray_Text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
...
